# scikit-image

./: .gitignore  .travis.yml  CONTRIBUTING.md  asv.conf.json  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/scripts/: setup_emscripten_ccache.py  setup_emscripten_ccache.sh
.github/workflows/: _build_linux_for_python_x.yaml  _test_linux_for_python_x.yaml  benchmarks.yaml  build-docs.yaml  circleci.yaml  test-autodepends.yaml  test-docs.yaml  test-linux.yaml  test-macos.yaml  test-pyodide.yaml  test-windows.yaml
.spin/: cmds.py
doc/: Makefile
doc/examples/: plot_canny.py  plot_edge_filter.py  plot_entropy.py  plot_marked_watershed.py  plot_medial_transform.py  plot_phase_unwrap.py  plot_watershed.py
doc/examples/applications/: plot_coins_segmentation.py  plot_rank_filters.py
doc/source/: conf.py  index.rst
doc/tools/: apigen.py  build_migration.py  build_modref_templates.py  migration_utils.py
requirements/: data.txt  optional.txt  optional_free_threaded.txt
skimage/exposure/: _adapthist.py
skimage/io/tests/: test_multi_image.py
skimage/viewer/plugins/: crop.py
skimage/viewer/utils/: core.py
src/_skimage2/_shared/: utils.py
src/_skimage2/data/: _fetchers.py  _registry.py  meson.build
src/_skimage2/feature/: _peaks.py
src/_skimage2/io/: collection.py
src/_skimage2/util/: _value_rescaling.py
src/skimage/_shared/: testing.py  utils.py
src/skimage/measure/: fit.py
tests/skimage/io/: test_io.py
tests/skimage/measure/: test_regionprops.py
tools/: download_data.py  generate_requirements.py
(+1 files in other folders)
